Fri Jan 13 18:24:26 1995  Ian Lance Taylor  <ian@sanguine.cygnus.com>

	* krb_kdb_utils.c (kdb_verify_master_key): Don't say ``BEWARE!'',
	since it's not clear what to be wary of.

Tue Jan 10 01:16:22 1995  Mark Eichin  <eichin@cygnus.com>

	* krb_dbm.c: add macro for dbm_delete under dbm.
	(kerb_db_del_principal): dbm_delete the key, and handle database
	locking correctly.
	* krb_lib.c (kerb_del_principal): get the principal, to sanity
	check, and then delete it.

Wed Jan  4 17:44:26 1995  Ian Lance Taylor  <ian@sanguine.cygnus.com>

	* krb_kdb_utils.c (kdb_get_master_key_from): Add verify argument,
	and pass it to read_password routine.
	(kdb_get_master_key): Add verify argument, and pass it to
	kdb_get_master_key_from.

Thu Nov  3 16:33:34 1994  Ian Lance Taylor  <ian@sanguine.cygnus.com>

	* krb_dbm.c (kerb_db_rename): Initialize local variable ok.

Tue Nov  1 16:29:32 1994  Ian Lance Taylor  <ian@sanguine.cygnus.com>

	* krb_lib.c: Don't bother to declare strncpy or ctime.  Declare
	getenv only if it is needed.
	(kerb_put_principal): Pass the address of a local time_t variable
	to localtime, rather than principal->mod_date which has type
	unsigned long.
	* krb_cache.c: Don't declare strncpy.
	* print_princ.c: Don't declare strncpy or ctime.

Mon Oct 31 19:40:43 1994  Ian Lance Taylor  <ian@sanguine.cygnus.com>

	* Makefile.in (CODE): Remove Imakefile.

Thu Jul 21 17:40:14 1994  Mark Eichin  (eichin@cygnus.com)

	* krb_kdb_utils.c (kdb_get_master_key_from): new function.
	Modification of kdb_get_master_key (which is now only called by
	things that force a prompt anyway, but is kept for compatibility.)
	Takes an extra argument, optional filename to get the key from.

Tue Jul  5 11:21:18 1994  Ken Raeburn  (raeburn@cujo.cygnus.com)

	* print_princ.c (krb_print_principal): Arg to localtime() should
	be time_t*.
	* krb_lib.c (kerb_put_principal): Arg to time() should be time_t*.

	* krb_kdb_utils.c: Include string.h.
