@@ -11,6 +11,7 @@ AC_PROG_INSTALL
 AC_HEADER_CHECK(ndbm.h,AC_DEFINE(NDBM))
 AC_CONST
 CHECK_FCNTL
+KRB5_POSIX_LOCKS
 AC_HEADER_CHECK(unistd.h,AC_DEFINE(HAS_UNISTD_H))
 ET_RULES
 SubdirLibraryRule([$(OBJS)])
